v2.1.0.1 fixes